refactored rest validators
